Fixed the note overflow issue

--- a/frontend/src/components/Note.css
+++ b/frontend/src/components/Note.css
@@ -4,6 +4,7 @@ body{
 }
 
 .main{
+  position:fixed;
   padding: 50px;
   height: 100vh;
   background-color: white;
